Docs: add accessibility & GUI testing guidance
Extend interactive-settings refactor docs with accessibility and GUI-testing recommendations. Documents two test-ID mechanisms (Component.setName and AccessibleContext), a kebab-case naming convention, and a GUIComponentIds constants class; recommends setting setName and accessibleName/description for all interactive widgets and adding a runtime test to enforce widget naming. Adds evaluation of GUI testing options and a recommended pyramid: MVP+Mockito for unit tests, AssertJ Swing + Caciocavallo for E2E/smoke, plus example Gradle/CI JVM args and test dependencies for headless CI.